# std-stupid

./: .gitattributes  Cargo.toml  README.md
async_http_stupid/: Cargo.toml
async_http_stupid/src/: http_compose.rs  http_parser.rs  http_struct.rs  lib.rs
errors_stupid/: Cargo.toml
errors_stupid/src/: lib.rs
http_stupid/: Cargo.toml
http_stupid/src/: httpCompose.rs  httpParser.rs  httpStruct.rs  http_compose.rs  http_parser.rs  http_struct.rs  lib.rs
src/: errors_stupid.rs  http.rs  main.rs  random_stupid.rs  standard_stupid.rs
src/http/: httpCompose.rs  httpParser.rs  httpStruct.rs
src/http_stupid/: httpCompose.rs  httpParser.rs  httpStruct.rs  mod.rs
standard_stupid/: Cargo.toml
standard_stupid/src/: lib.rs  thread.rs  thread_manager.rs
test/: request.binary
test/benchmarking/: lorem.html
