[package]
name = "std-stupid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http_stupid = { path = "./http_stupid" }
errors_stupid = { path = "./errors_stupid/" }
standard_stupid = { path = "./standard_stupid/" }
async_http_stupid = {path = "./async_http_stupid/"}
async-std = "1.12.0"

[workspace]

members = ["http_stupid", "errors_stupid", "standard_stupid", "async_http_stupid"]
