[package]
name = "std-stupid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http_stupid = { path = "./http_stupid" }
errors_stupid = { path = "./errors_stupid/" }
standard_stupid = { path = "./standard_stupid/" }
tracing = { version = "0.1.40", default-features = false, features = [
  "log",
  "attributes",
  "valuable",
  "async-await",
] }

[workspace]

members = ["http_stupid", "errors_stupid", "standard_stupid"]
