[package]
name = "std-stupid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http_stupid = { path = "./http_stupid" }
errors_stupid = { path = "./errors_stupid/" }
standard_stupid = { path = "./standard_stupid/" }
# no-std crates
tracing = { version = "0.1.40", default-features = false, features = [
  "log",
  "attributes",
  "valuable",
  "async-await",
] }

# Try to get away from these
tracing-subscriber = { version = "0.3.18" }
[workspace]

members = ["http_stupid", "errors_stupid", "standard_stupid"]
