[package]
name = "async_http_stupid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errors_stupid = { path = "../errors_stupid/" }
futures = "0.3.30"
standard_stupid = { path = "../standard_stupid/" }

[dependencies.async-std]
version = "1.12.0"
features = ["attributes"]
